Made Audio Responsive

--- a/Css/audio.css
+++ b/Css/audio.css
@@ -37,22 +37,43 @@ html{
     75%{background-image: url(../Img/Pixel-Buds-A.jpg.fdmdownload);}
 }
 
+.home-article{
+    margin-bottom: 4rem;
+}
 
 @media (max-width:998px){
     html{
-        font-size: 55%;
-    }
-    body{
-        background-position: center;
+        font-size: 40%;
     }
 }
 
 @media (max-width:768px){
     html{
-        font-size: 20%;
+        font-size: 40%;
     }
     .home-articles{
         width: 100%;
-        margin-left: 0;
+    }
+    .Images{
+        flex-direction: column;
+    }
+    .left-side{
+        width: 100%;
+    }
+    .right-side{
+        width: 100%;
+    }
+    .home-article-img img{
+        height: 70px;
+        width: 100px;
+        
+    }
+    h3{
+        margin-bottom: 2.5rem;
+        margin-left: 1rem;
+    }
+    .Images{
+        height: 50rem;
     }
 }
+
